# ChangeLog for dev-qt/qtgui
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-qt/qtgui/ChangeLog,v 1.66 2015/03/25 16:06:35 ago Exp $

  25 Mar 2015; Agostino Sarubbo <ago@gentoo.org> qtgui-4.8.5-r4.ebuild:
  Stable for ia64, wrt bug #541972

  19 Mar 2015; Jeroen Roovers <jer@gentoo.org> qtgui-4.8.5-r4.ebuild:
  Stable for HPPA (bug #541972).

  18 Mar 2015; Andreas Schuerch <nativemad@gentoo.org> qtgui-4.8.5-r4.ebuild:
  x86 stable, see bug 541972

  18 Mar 2015; Agostino Sarubbo <ago@gentoo.org> qtgui-4.8.5-r4.ebuild:
  Stable for amd64, wrt bug #541972

*qtgui-4.8.6-r2 (17 Mar 2015)
*qtgui-4.8.5-r4 (17 Mar 2015)

  17 Mar 2015; Michael Palimaka <kensington@gentoo.org>
  +files/qtgui-4.8.5-CVE-2015-0295.patch, +qtgui-4.8.5-r4.ebuild,
  +qtgui-4.8.6-r2.ebuild, -qtgui-4.8.6-r1.ebuild:
  Backport patch from upstream to solve CVE-2015-0295 wrt bug #541972.

*qtgui-5.4.1-r1 (17 Mar 2015)

  17 Mar 2015; Michael Palimaka <kensington@gentoo.org>
  +files/qtgui-5.4.1-CVE-2015-0295.patch, +qtgui-5.4.1-r1.ebuild,
  -qtgui-5.4.1.ebuild:
  Backport patch from upstream to solve CVE-2015-0295 wrt bug #541972.

  08 Mar 2015; Davide Pesavento <pesa@gentoo.org> qtgui-5.4.1.ebuild:
  Remove all keywords from "live" branch.

  02 Mar 2015; Yixun Lan <dlan@gentoo.org> qtgui-5.4.1.ebuild:
  add arm64 support, tested on A53 board

  24 Feb 2015; Davide Pesavento <pesa@gentoo.org>
  -files/qtgui-5.4.0-bigendian.patch:
  Delete unused patch.

  24 Feb 2015; Michael Palimaka <kensington@gentoo.org> qtgui-5.4.1.ebuild:
  Remove failing patch that was applied upstream.

*qtgui-5.4.1 (24 Feb 2015)

  24 Feb 2015; Davide Pesavento <pesa@gentoo.org> +qtgui-5.4.1.ebuild,
  -qtgui-5.4.0.ebuild:
  Version bump.

  03 Feb 2015; Jeroen Roovers <jer@gentoo.org> qtgui-5.4.0.ebuild:
  Marked ~hppa too.

  02 Feb 2015; Mikle Kolyada <zlogene@gentoo.org> qtgui-5.4.0.ebuild:
  Add ~arm keyword
