@@ -18,22 +18,24 @@ EBUILD qtgui-4.8.5-r3.ebuild 6299 SHA256 d49aca808e9bfb951a2fcec3893c4d6f396c071
 EBUILD qtgui-4.8.5-r4.ebuild 6368 SHA256 1824af23cde98850150fd6aac5c7c5d42285fc2ac42adca42e37c93eae70d96d SHA512 6a000897439ca3dea191cb8fec6c1d094ec7b9b5cd18ca04f687df17224b202a637f203308fc7c99fa2ede48bd4390e0a0b7247e764358135289fafc94ac963c WHIRLPOOL 15488f98eb668f7959c5cc002eb7182a740eea8e8e60391deb7b6e59c7f337a554678199bad23a7cd711ffc81a5c9de470c480bcf1d0595fbc269a7ea0aeaeac
 EBUILD qtgui-4.8.6-r2.ebuild 6169 SHA256 b18f06e3786e8776071606e0f6ce040db91e44c9dff861ed34219ac1dc78d08f SHA512 f7ffd0c7b325d81bb65f0e6cb24628fbe2234ae537ae0bff16299c9d2cb698620622d5f26d452d60902ef9d6fdc9c48dcb3eb897af45234d530c50a04944f761 WHIRLPOOL 70db7b0d6d1d7cf37db12d6359fbb482431eb85f79253d1e215202f9fe4bdb313896801bd724afb2d2805b1941ebfeeb22d2d4e89d7562c21a43030fe8a38b08
 EBUILD qtgui-5.4.1-r1.ebuild 3438 SHA256 808969499a1a19c849b30e495ff302b0c99cea08b5109878bc3ee5d56e371fb2 SHA512 19d61fdf25e5cc666d2d153e5dd365e20c8851cb8f42498520af2d9e72377b0ba02783ea5340bf0106e90469a745174ad4def1f4779d5276c2facb32ebff8af4 WHIRLPOOL 8954a8bd034d8d97bac92a63ba5136a2e56decea737a3d28364902aa4282c17baf6b30b5d8a90695862fb4c85dcd0b35bef68a130b63470958c3ce6b19100ae4
-MISC ChangeLog 41832 SHA256 9265a24165c0c3b7f3c520108511d1ac405f459ce9e88f6664d1fef105483d82 SHA512 8c1b23b1ae9a3edade659a2a72854316d24c65d2f157125c11d63f684a4dc801d8e94c58bcaf990fd59f57e57a5e649114bb749cfab3308d8e0155139205509b WHIRLPOOL 723517d00a5ac5608514044342998790c4aa37ea9db7188eaf175e80d04a12e8f23317b0aa49936184733947c8ec26254402f4ddce015f23bd7ab9e010c262f8
-MISC metadata.xml 1611 SHA256 da317017f121f7acacc658d65facb20779201ee298d329540d86b8c078050d4b SHA512 6f2a48dc6396a64ee1cc472de618f54d8653090e8f57cd7997f3ff8d6f5ade41af5204a92f99426b71986c3313675ec55c655de0c9475b066cc0fbd3b8933500 WHIRLPOOL 10cc6992a3505ee99485125e9988ee9a40d95ad670ed81be6fe3f1f47292a980ab97f14dbf551390dd67dfaaa92862fb106810ead8ea379e814eb97e1a067096
+MISC ChangeLog 41938 SHA256 b0399e3d4398531aa01c3b3218158c119fd75faec9bcf34c3f589e75802bc1fd SHA512 986af622f4b2b5c9feb10da48478b76258ece4a6f9c48d3bfb8e2d5c258a2035c0da49b46f2b0786c19214396d3a7ac925b2a3bb63320ebb57ebe0d596f0c1ad WHIRLPOOL 0d14c5789591db2fe22c223f6beec15021d725886c1c505e6d34461120d65f0232ce968de6fee5a7872037ca44a5c41a7542630e32bc33f82aa716f8d0765ea5
+MISC metadata.xml 1431 SHA256 40799d067d2838a90818644ba38a4af47880194285c0627658b6d6798219ca17 SHA512 51e5b41ecc5584a3bda4f595bc5dd43ab89070ce356d2c03406479ed36490d46fa235eefd07707e30e9cdd952cd77bcf626423c5453725d442e769eb14c0e130 WHIRLPOOL 56c82cccefe2dd43b577456fcc90ed99ceb020b78d24f93f0c7a7618274f2025837c4142d75569f5894a2cacb45ca42c34e5e74d73e03aa6a9f9e2fb84b9c149
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJVEt0MAAoJELp701BxlEWfSdMQAK4xdXCzZ9UqAlV3y2hf3+y8
-WnBrEM2SSMl6ZiMRCGZzTYUGlK8igveoaigvkdwG6y+sM9p9UpxRGZvs+upGrvo9
-BwERwxRQIsorPAJyYCv78YvqgR4AnMior0cXZegnFiEuL4gmzByoZygs7xOdpg9V
-CkV/EBUz5pYjhxVKgaDcYF0bLcH0GQjyLfir6iNICEIHQlfYdtlf2DVMBua0Hr/w
-81Q4RB3yPnYJb9sCnB5JNeZsX1oACQIy3jyDQieoO9Tjhj6MoCQSpJwBJa8pNTHt
-esi59aY7w1ueW/9rCS6DHngGCW4K8POf9/fxpi/WRNE28dP1wqEHcIybzj2utlav
-2df0RT2cMU9zzs4s+a/IqwrHKcwEW8uek4VRcK7E+tTJZt3D0UGjDODK9Qk5QmhP
-U87rItZPiAmJa9I4z9JBrwbf/C4DRQ+18v5kHe/Cr+lxneWiiTeRBJsuFsXak/5m
-dPSu90x0BTBgBzqsMQNy6nApMU9vTP/AUZM6yJQ644YZRkUTXvr7kNv0UCPXlsgu
-jYmA2bVZR7wJtVvOKWaUY979VudhY2uPAtgnYVWSKqSx7mt5Fpt0JkTP+V4UIoI0
-FYBU/VVado34oMXXsrdqwHnnw3TjsW4b4OHKiZ3QIVchC5Tc+kWHOEqiyfW5sm7k
-JZII3Kx89kB28MgF9T70
-=mJyR
+iQJ8BAEBCABmBQJVE1vJXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ4N0Y5QkIzRDgwM0JERkYzMTc5RTI1MjhE
+QURFRDZCMjY3MUNCNTdEAAoJENre1rJnHLV9owwP/jq/rDzmkRR5tkSek5gE+NN3
+bJ0KkMNjUuYh31GotBwBaxYb2L403BPOAG4t+CZglJH9Y32H4XQimnQxkQlb3A1s
+cTGyAvN74d4XMs85pzBr60Gw0RjXRm8mgAk6XoKrF6l9EBQn+l7uhALghTo5q+Xu
+rylGBEGrwkF4WR9n2WDSkM/5Kf7sHFNB1Qzhina90MtqaNPPIE/8r+aWzLqStqAR
+gl3ZqUpFBlPKfegpGxSX44mPDVIErT28QczZ5aui3s26OvIBAkvcCWstpAuz5kDW
+7y0uVUwKb4ug8QN1Yv0USDsgoenpj5GocdBVc158kSVHE+DJKxyvT+MkQQbP9X1s
+g6+DEamOaZatkMLIFiaXI44XWXlnmkmyjpxxmtfmGKoKWAgere3pgmQQSG5RBWU0
+iPDlFiIoQU6swurG9SzlAkR5q00+Bbor4Ce2f3rIch2qiuhfzk0x5eyHoYcQwNHm
+EQ/h2LBqFjps3Z7/Vj7BPRk64L8c8Wy4ox2V1ss0zJXBQCgPZW/TKP79ipgf3rMm
+e9RMUioE958ypR1Dwnt3NKsxynO0ecxQ3kXiZv9M/d9/C7QpNe74xx/6ydHC0LH2
+37cL8BcUdyzMDW7PUJ+nk4YICJ5AD/Xz368OiFPFfKlZgExoCYW95EJ8xDrcNILj
+xNWO8G6A1dSuH+3L6gG1
+=CvE8
 -----END PGP SIGNATURE-----
